embeded svg, finish js

--- a/index.css
+++ b/index.css
@@ -30,6 +30,14 @@ body {
     color: transparent;
 }
 
+.failure {
+    color: red;
+}
+
+.success {
+    color: green;
+}
+
 .message {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #777;
